# FlatShare

./: back.yaml  flat-cluster-kubeconfig.yaml  full.yaml  manager.yaml
flat-back/: Cargo.toml  Dockerfile
flat-back/dnl/: Funny.txt
flat-back/files/: Funny.txt  test.json
flat-back/src/: main.rs
flat-manager/: Cargo.toml  Dockerfile
flat-manager/src/: main.rs
flat_db/: deploy.yaml
