[package]
name = "flat-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", features = ["openssl"]}
actix-files = "0.6"
actix-multipart = "0.5"
actix-multipart-extract = "0.1.5"
# actix-easy-multipart = "3"
futures-util = "0.3"
sanitize-filename = "0.4"
# reqwest = {version =  "0.11.14", features = ["blocking", "multipart"]}
env_logger = "0.10"
tempfile = "3.3.0"
uuid =  { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics",]}

# hyper = {version = "0.14.24", features = ["client", "http2"]}
# hyper-tls = "*"

awc = "*"

clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio = "*"
tokio-stream = { version = "0.1.3", features = ["sync"] }
url = "2.2"
log = "*"